[workspace]
resolver = "3"
members = ["yapg", "yapg-test"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

syn = { version = "2", features = ["full", "parsing"] }
quote = "1"
proc-macro2 = "1"
heck = "0.4"
logos = "0.15.1"
phf = { version = "0.12", features = ["macros"] }
